Trying to fix GEF tests